--- a/My contacts.html
+++ b/My contacts.html
@@ -21,11 +21,15 @@
       <form action="mailto:kishionmohan@gmail.com" method="post" enctype="plain/text">
 <label>Your name:</label>
 <input type="text" name="Your name" value=""  /><br />
+<br />
 <label>Password:</label>
 <input type="password" name="Your password" value="" /><br />
-<label>Email address</label>
+<br />
+<label>Email address:</label>
 <input type="email" name="Your mail" value="" /><br />
-<input type="color" name="value" />
+<br />
+<label>Your message:</label>
+<textarea name="name" rows="10" cols="30"></textarea><br />
 <input type="submit" name="" />
      </form>
   </body>
